--- a/index.html
+++ b/index.html
@@ -6,111 +6,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">
-                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-            </a>
-            <ul class="list nav-link">
-                <li><a class="nav-link current" href="./index.html">Студія</a></li>
-                <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="nav-link" href="#">Kонтакти</a></li>
+    <header class="header">
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a class="header-logo" href="./index.html">Web<span class="logo-studio">Studio</span>
+                </a>
+                <ul class="list nav-list">
+                    <li class="nav-item"><a class="nav-link current" href="./index.html">Студія</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Kонтакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-list list">
+                <li class="contact-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contact-item"><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list contacts-link">
-            <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
-        <div class="order">
-            <section>
+        <section class="hero-section">
+            <div class="container">
                 <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
                 <button class="order-button" type="button">Замовити послугу</button>
-            </section>
-        </div>
-        <section>
-            <h2 class="visually-hidden">Наші переваги</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="adv-title">Увага до деталей</h3>
-                    <p class="adv-subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування
+            </div>
+        </section>
+        <section class="section">
+            <div class="adv-container container">
+                <h2 class="visually-hidden">Наші переваги</h2>
+                 <ul class="list adv-list">
+                     <li class="adv-item">
+                         <h3 class="adv-title">Увага до деталей</h3>
+                         <p class="adv-subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування
                         позиції.</p>
-                </li>
-                <li>
-                    <h3 class="adv-title">Пунктуальність</h3>
-                    <p class="adv-subtitle">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="adv-title">Планування</h3>
-                    <p class="adv-subtitle">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="adv-title">Сучасні технології</h3>
-                    <p class="adv-subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                    </p>
-                </li>
-            </ul>
+                     </li>
+                     <li class="adv-item">
+                         <h3 class="adv-title">Пунктуальність</h3>
+                         <p class="adv-subtitle">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
+                     </li>
+                     <li class="adv-item">
+                        <h3 class="adv-title">Планування</h3>
+                        <p class="adv-subtitle">Так само консультація з широким активом значною мірою зумовлює.</p>
+                     </li>
+                     <li class="adv-item">
+                        <h3 class="adv-title">Сучасні технології</h3>
+                        <p class="adv-subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section>
-            <h2 class="secondary-title">Чим ми займаємося</h2>
-            <ul class="list">
-                <li><img src="./images/computer.jpg" alt="Людина працює за компʼютером" width="370" height="294"></li>
-                <li><img src="./images/smartphone.jpg" alt="Людина тримає в руці телефон" width="370" height="294"></li>
-                <li><img src="./images/colours.jpg" alt="Людина обирає колір з палітри" width="370" height="294"></li>
-            </ul>
+        <section class="about-section">
+            <div class="container">
+                <h2 class="secondary-title">Чим ми займаємося</h2>
+                <ul class="list img-list">
+                    <li><img src="./images/computer.jpg" alt="Людина працює за компʼютером" width="370" height="294"></li>
+                    <li><img src="./images/smartphone.jpg" alt="Людина тримає в руці телефон" width="370" height="294"></li>
+                    <li><img src="./images/colours.jpg" alt="Людина обирає колір з палітри" width="370" height="294"></li>
+                </ul>
+            </div>  
         </section>
-        <section class="team-section">
-            <h2 class="secondary-title">Наша команда</h2>
-            <ul class="list">
-                <li class="team-item">
-                    <img src="./images/product_designer.jpg" alt="Чоловік в окулярах посміхається" width="270"
-                        height="260">
-                    <h3 class="team-title">Ігор Дем'яненко</h3>
-                    <p class="team-subtitle">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/frontend_developer.jpg" alt="Дівчина в окулярах та чорному жакеті посміхається"
-                        width="270" height="260">
-                    <h3 class="team-title">Ольга Рєпіна</h3>
-                    <p class="team-subtitle">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/marketing.jpg" alt="Чоловік в блакитній сорочці посміхається, дивиться в сторону"
-                        width="270" height="260">
-                    <h3 class="team-title">Микола Тарасов</h3>
-                    <p class="team-subtitle">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/ui_designer.jpg" alt="Чоловік в чорній футболці та окулярах посміхається"
-                        width="270" height="260">
-                    <h3 class="team-title">Михайло Єрмаков</h3>
-                    <p class="team-subtitle">UI Designer</p>
-                </li>
-            </ul>
+        <section class="team-section section">
+            <div class="container">
+                <h2 class="secondary-title">Наша команда</h2>
+                <ul class="list team-list">
+                    <li class="team-item">
+                        <img src="./images/product_designer.jpg" alt="Чоловік в окулярах посміхається" width="270" height="260">
+                        <div class="team-box">
+                            <h3 class="team-title">Ігор Дем'яненко</h3>
+                            <p class="team-subtitle">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/frontend_developer.jpg" alt="Дівчина в окулярах та чорному жакеті посміхається" width="270"
+                            height="260">
+                        <div class="team-box">
+                            <h3 class="team-title">Ольга Рєпіна</h3>
+                            <p class="team-subtitle">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/marketing.jpg" alt="Чоловік в блакитній сорочці посміхається, дивиться в сторону" width="270"
+                            height="260">
+                        <div class="team-box">
+                            <h3 class="team-title">Микола Тарасов</h3>
+                            <p class="team-subtitle">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/ui_designer.jpg" alt="Чоловік в чорній футболці та окулярах посміхається" width="270"
+                            height="260">
+                        <div class="team-box">
+                            <h3 class="team-title">Михайло Єрмаков</h3>
+                            <p class="team-subtitle">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>     
         </section>
-
     </main>
     <footer>
-        <a href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-footer">Studio</span>
+        <div class="container">
+            <a  class="logo-footer" href="./index.html">Web<span class="logo-footer-studio">Studio</span>
         </a>
-        <address>
-            <ul class="list">
-                <li><a class="address-link" href="https://goo.gl/maps/MCh6iijixuNLaUNb6">м. Київ, пр-т Лесі Українки,
-                        26</a></li>
-                <li><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <address class="address">
+            <ul class="list address-list">
+                <li class="address-item"><a class="address-link" href="https://goo.gl/maps/MCh6iijixuNLaUNb6">м. Київ, пр-т Лесі Українки,
+                        26</a>
+                </li>
+                <li class="address-item"><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-item"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 
