--- a/portfolio.html
+++ b/portfolio.html
@@ -6,105 +6,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">
-                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-            </a>
-            <ul class="list nav-link">
-                <li><a class="nav-link" href="./index.html">Студія</a></li>
-                <li><a class="nav-link current" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="nav-link" href="#">Kонтакти</a></li>
+    <header class="header">
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a class="header-logo" href="./index.html">Web<span class="logo-studio">Studio</span>
+                </a>
+                <ul class="list nav-list">
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Студія</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Kонтакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-list list">
+                <li class="contact-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-item"><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list contacts-link">
-            <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <section class="portfolio">
-            <h2 class="visually-hidden">Наші проекти</h2>
-            <ul class="list">
-                <li><button class="portfolio-btn" type="button">Усі</button></li>
-                <li><button class="portfolio-btn" type="button">Веб-сайти</button></li>
-                <li><button class="portfolio-btn" type="button">Додатки</button></li>
-                <li><button class="portfolio-btn" type="button">Дизайн</button></li>
-                <li><button class="portfolio-btn" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="list">
-                <li class="product-item">
-                    <img src="./images/technokryak.jpg" alt="ноутбук, на екрані зображені три фотокартки людей"
-                        width="370" height="294">
-                    <h3 class="product-title">Технокряк</h3>
-                    <p class="product-subtitle">Веб-сайт</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/new_orlean.jpg" alt="двоє баскетболістів з різних команд в боротьбі за мʼяч"
-                        width="370" height="294">
-                    <h3 class="product-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="product-subtitle">Дизайн</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/seafood.jpg" alt="логотип ресторану, назва ресторану на фоні риби" width="370"
-                        height="294">
-                    <h3 class="product-title">Ресторан Seafood</h3>
-                    <p class="product-subtitle">Додаток</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/project_prime.jpg" alt="чорні навушники" width="370" height="294">
-                    <h3 class="product-title">Проєкт Prime</h3>
-                    <p class="product-subtitle">Маркетинг</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/boxes.jpg" alt="біла та коричнева коробки" width="370" height="294">
-                    <h3 class="product-title">Проєкт Boxes</h3>
-                    <p class="product-subtitle">Додаток</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/inspiration.jpg" alt="монітор з зображенням веб-сайту" width="370" height="294">
-                    <h3 class="product-title">Inspiration has no Borders</h3>
-                    <p class="product-subtitle">Веб-сайт</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/limited_edition.jpg" alt="відкритий журнал" width="370" height="294">
-                    <h3 class="product-title">Видання Limited Edition</h3>
-                    <p class="product-subtitle">Дизайн</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/project_lab.jpg" alt="бирка для одягу з назвою проєкту" width="370" height="294">
-                    <h3 class="product-title">Проєкт LAB</h3>
-                    <p>Маркетинг</p>
-                </li>
-                <li class="product-item">
-                    <img src="./images/growing_business.jpg" alt="людина працює за компʼютером" width="370"
-                        height="294">
-                    <h3 class="product-title">Growing Business</h3>
-                    <p class="product-subtitle">Додаток</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="visually-hidden">Наші проекти</h2>
+                <ul class="list portfolio-btns">
+                    <li class="item"><button class="portfolio-btn" type="button">Усі</button></li>
+                    <li class="item"><button class="portfolio-btn" type="button">Веб-сайти</button></li>
+                    <li class="item"><button class="portfolio-btn" type="button">Додатки</button></li>
+                    <li class="item"><button class="portfolio-btn" type="button">Дизайн</button></li>
+                    <li class="item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="list products-list">
+                    <li class="product-item">
+                        <img src="./images/technokryak.jpg" alt="ноутбук, на екрані зображені три фотокартки людей" width="370"
+                            height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Технокряк</h3>
+                            <p class="product-subtitle">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/new_orlean.jpg" alt="двоє баскетболістів з різних команд в боротьбі за мʼяч" width="370"
+                            height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Постер New Orlean vs Golden Star</h3>
+                            <p class="product-subtitle">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/seafood.jpg" alt="логотип ресторану, назва ресторану на фоні риби" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Ресторан Seafood</h3>
+                            <p class="product-subtitle">Додаток</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/project_prime.jpg" alt="чорні навушники" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Проєкт Prime</h3>
+                            <p class="product-subtitle">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/boxes.jpg" alt="біла та коричнева коробки" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Проєкт Boxes</h3>
+                            <p class="product-subtitle">Додаток</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/inspiration.jpg" alt="монітор з зображенням веб-сайту" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Inspiration has no Borders</h3>
+                            <p class="product-subtitle">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/limited_edition.jpg" alt="відкритий журнал" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Видання Limited Edition</h3>
+                            <p class="product-subtitle">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/project_lab.jpg" alt="бирка для одягу з назвою проєкту" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Проєкт LAB</h3>
+                            <p class="product-subtitle">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="product-item">
+                        <img src="./images/growing_business.jpg" alt="людина працює за компʼютером" width="370" height="294">
+                        <div class="product-container">
+                            <h3 class="product-title">Growing Business</h3>
+                            <p class="product-subtitle">Додаток</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>     
         </section>
 
     </main>
     <footer>
-        <a href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-footer">Studio</span>
-        </a>
-        <address>
-            <ul class="list">
-                <li><a class="address-link" href="https://goo.gl/maps/MCh6iijixuNLaUNb6">м. Київ, пр-т Лесі Українки,
-                        26</a></li>
-                <li><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="logo-footer" href="./index.html">Web<span class="logo-footer-studio">Studio</span>
+            </a>
+            <address class="address">
+                <ul class="list address-list">
+                    <li class="address-item"><a class="address-link" href="https://goo.gl/maps/MCh6iijixuNLaUNb6">м. Київ,
+                            пр-т Лесі Українки,
+                            26</a>
+                    </li>
+                    <li class="address-item"><a class="footer-contact"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="address-item"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
