--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
             </div>
         </section>
         <section class="section">
-            <div class="adv-container container">
+            <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
-                 <ul class="list adv-list">
-                     <li class="adv-item">
-                         <h3 class="adv-title">Увага до деталей</h3>
-                         <p class="adv-subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                 <ul class="list introduction-list">
+                     <li class="introduction-item">
+                         <h3 class="introduction-title">Увага до деталей</h3>
+                         <p class="introduction-subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування
                         позиції.</p>
                      </li>
-                     <li class="adv-item">
-                         <h3 class="adv-title">Пунктуальність</h3>
-                         <p class="adv-subtitle">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                     <li class="introduction-item">
+                         <h3 class="introduction-title">Пунктуальність</h3>
+                         <p class="introduction-subtitle">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                      </li>
-                     <li class="adv-item">
-                        <h3 class="adv-title">Планування</h3>
-                        <p class="adv-subtitle">Так само консультація з широким активом значною мірою зумовлює.</p>
+                     <li class="introduction-item">
+                        <h3 class="introduction-title">Планування</h3>
+                        <p class="introduction-subtitle">Так само консультація з широким активом значною мірою зумовлює.</p>
                      </li>
-                     <li class="adv-item">
-                        <h3 class="adv-title">Сучасні технології</h3>
-                        <p class="adv-subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                     <li class="introduction-item">
+                        <h3 class="introduction-title">Сучасні технології</h3>
+                        <p class="introduction-subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                         </p>
                     </li>
                 </ul>
